argocdappset/dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
  namespace: devmicroservices
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
